Tweak to blue accent colour, changed Claim VIP to VIP List, all icons now white with blue hover, removed beta from roadmap, animated hero arrow, FAQ and Rewards centered.

--- a/index.html
+++ b/index.html
@@ -65,23 +65,25 @@
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <a href="https://twitter.com/MetaFashionNFT" class="twitter">
+                        <a href="https://twitter.com/MetaFashionNFT">
                             <span class="icon is-large">
                                 <i class="fab fa-twitter fa-lg"></i>
                             </span>
                         </a>
-                        <a href="https://discord.com" class="discord">
+                        <a href="https://discord.com/invite/baryFXMV">
                             <span class="icon is-large">
                                 <i class="fab fa-discord fa-lg"></i>
                             </span>
                         </a>
-                        <span class="icon is-large">
-                            <i class="fab fa-instagram fa-lg"></i>
-                        </span>
+                        <a href="https://instagram.com/metafashion.NFT">
+                            <span class="icon is-large">
+                                <i class="fab fa-instagram fa-lg"></i>
+                            </span>
+                        </a>
                     </div>
                     <div class="navbar-item is-spacer">|</div>
                     <div class="navbar-item">
-                        <a class="button modal-button vip" data-target="vip">Claim VIP</a>
+                        <a class="button modal-button vip" data-target="vip">VIP List</a>
                     </div>
                 </div>
             </div>
@@ -94,8 +96,7 @@
                     <p class="subtitle has-text-centered">
                         <a href="#rewards">
                             <span class="icon is-large">
-                                <svg class="t-cover__arrow-svg" style="fill:white;" x="0px" y="0px" width="38.417px"
-                                     height="18.592px" viewBox="0 0 38.417 18.592">
+                                <svg class="arrow" style="fill:white;" x="0px" y="0px" viewBox="0 0 38.417 18.592">
                                     <g>
                                         <path d="M19.208,18.592c-0.241,0-0.483-0.087-0.673-0.261L0.327,1.74c-0.408-0.372-0.438-1.004-0.066-1.413c0.372-0.409,1.004-0.439,1.413-0.066L19.208,16.24L36.743,0.261c0.411-0.372,1.042-0.342,1.413,0.066c0.372,0.408,0.343,1.041-0.065,1.413L19.881,18.332C19.691,18.505,19.449,18.592,19.208,18.592z"></path>
                                     </g>
@@ -111,32 +112,39 @@
             <div class="columns is-variable is-8">
                 <div class="column">
                     <h4 class="title is-4">MINTING REWARDS</h4>
-                    <ul>
-                        <li>FREE MERCH TO WALLETS THAT MINT ON LAUNCH DAY</li>
-                        <li>1/1 TOKEN REWARDS UP TO $50K IN ETH</li>
-                        <li>SPECIAL ROLE IN DISCORD</li>
-                        <li>MINT & HODL AIRDROP</li>
-                    </ul>
+                    <div class="level">
+                        <div class="level-item">
+                            <ul>
+                                <li>FREE MERCH TO WALLETS THAT MINT ON LAUNCH DAY</li>
+                                <li>1/1 TOKEN REWARDS UP TO $50K IN ETH</li>
+                                <li>SPECIAL ROLE IN DISCORD</li>
+                                <li>MINT & HODL AIRDROP</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="column">
                     <h4 class="title is-4">HOLDING REWARDS</h4>
-                    <ul>
-                        <li>AIRDROPS</li>
-                        <li>DAO VOTING POWER</li>
-                        <li>METAVERSE ACCESS</li>
-                        <li>$METAFASHION TOKEN REWARDS</li>
-                        <li>EXCLUSIVE MERCH ACCESS</li>
-                        <li>METAFASHION HQ PRIVATE CLUB</li>
-                        <li>IRL MEET UP EVENT ACCESS</li>
-                        <li>HODLER GIVEAWAYS (ETH, NFTS, TRIPS & MORE!)</li>
-                    </ul>
+                    <div class="level">
+                        <div class="level-item">
+                            <ul>
+                                <li>AIRDROPS</li>
+                                <li>DAO VOTING POWER</li>
+                                <li>METAVERSE ACCESS</li>
+                                <li>$METAFASHION TOKEN REWARDS</li>
+                                <li>EXCLUSIVE MERCH ACCESS</li>
+                                <li>METAFASHION HQ PRIVATE CLUB</li>
+                                <li>IRL MEET UP EVENT ACCESS</li>
+                                <li>HODLER GIVEAWAYS (ETH, NFTS, TRIPS & MORE!)</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
         <!--Roadmap-->
         <section id="roadmap" class="section">
-            <h1 class="title">Roadmap (Beta)</h1>
-
+            <h1 class="title">Roadmap</h1>
             <div class="timeline is-centered">
                 <!--Phase 1-->
                 <div class="timeline-phase">
@@ -336,7 +344,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-blue glow-blue" src="assets/5.png" alt="Cameron Burns">
+                            <img class="is-rounded is-blue" src="assets/5.png" alt="Cameron Burns">
                         </figure>
 
                         <div class="card-content has-text-centered">
@@ -348,14 +356,14 @@
                                 <div class="media-content ">
                                     <p class="subtitle is-6">
                                     <span class="icon is-large">
-                                        <a class="twitter" href="https://twitter.com/captvart">
+                                        <a href="https://twitter.com/captvart">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-twitter fa-2xl"></i>
                                             </span>
                                         </a>
                                     </span>
-                                        <span class="icon is-large">
-                                        <a class="instagram" href="https://instagram.com/captvart">
+                                    <span class="icon is-large">
+                                        <a href="https://instagram.com/captvart">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-instagram fa-2xl"></i>
                                             </span>
@@ -370,7 +378,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-orange glow-orange" src="assets/6.png" alt="Jeremy Eggert">
+                            <img class="is-rounded is-orange" src="assets/6.png" alt="Jeremy Eggert">
                         </figure>
 
                         <div class="card-content has-text-centered">
@@ -382,14 +390,14 @@
                                 <div class="media-content ">
                                     <p class="subtitle is-6">
                                     <span class="icon is-large">
-                                        <a class="twitter" href="https://twitter.com/Jeremyalanmob">
+                                        <a href="https://twitter.com/Jeremyalanmob">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-twitter fa-2xl"></i>
                                             </span>
                                         </a>
                                     </span>
                                         <span class="icon is-large">
-                                        <a class="instagram" href="https://instagram.com/jeremy.eggert">
+                                        <a href="https://instagram.com/jeremy.eggert">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-instagram fa-2xl"></i>
                                             </span>
@@ -404,7 +412,7 @@
                 <div class="column">
                     <div class="card">
                         <figure class="image is-square">
-                            <img class="is-rounded neon-red glow-red" src="assets/9.png" alt="Hilly">
+                            <img class="is-rounded is-red" src="assets/9.png" alt="Hilly">
                         </figure>
 
                         <div class="card-content has-text-centered">
@@ -416,14 +424,14 @@
                                 <div class="media-content ">
                                     <p class="subtitle is-6">
                                     <span class="icon is-large">
-                                        <a class="twitter" href="https://twitter.com/hillywrld">
+                                        <a href="https://twitter.com/hillywrld">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-twitter fa-2xl"></i>
                                             </span>
                                         </a>
                                     </span>
                                         <span class="icon is-large">
-                                        <a class="instagram" href="https://instagram.com/hillywrld">
+                                        <a href="https://instagram.com/hillywrld">
                                             <span class="icon is-rounded">
                                                 <i class="fab fa-instagram fa-2xl"></i>
                                             </span>
@@ -438,7 +446,7 @@
             </div>
         </section>
         <!--FAQ-->
-        <section id="faq" class="section" >
+        <section id="faq" class="section has-text-centered">
             <h1 class="title">FAQ</h1>
 
             <div class="block">
@@ -458,10 +466,8 @@
                     </a>
                 </header>
                 <div id="cost" class="answer is-collapsible">
-                    <ul>
-                        <li>VIP LIST will be .075Ξ + Gas</li>
-                        <li>Public Sale will be .085Ξ + Gas</li>
-                    </ul>
+                    <p>VIP LIST will be .075Ξ + Gas</p>
+                    <p>Public Sale will be .085Ξ + Gas</p>
                 </div>
             </div>
             <div class="block">
@@ -482,10 +488,8 @@
                     </a>
                 </header>
                 <div id="max" class="answer is-collapsible">
-                    <ul>
-                        <li>VIP LIST will have a limit of 3 Mints, one transaction Max</li>
-                        <li>PUBLIC SALE will have a limit of 5 Mints per Transaction, for up to 3 transactions</li>
-                    </ul>
+                    <p>VIP LIST will have a limit of 3 Mints, one transaction Max</p>
+                    <p>PUBLIC SALE will have a limit of 5 Mints per Transaction, for up to 3 transactions</p>
                 </div>
             </div>
             <div class="block">
@@ -506,13 +510,15 @@
                      alt="MetaFashionNFT is a collection of 10K generative 3D art pieces about to drop on the Ethereum blockchain!">
             </div>
             <div class="content has-text-centered">
-                <a href="https://twitter.com/MetaFashionNFT" class="twitter">
+                <a href="https://twitter.com/MetaFashionNFT">
                     <i class="fab fa-twitter fa-2xl"></i>
                 </a>
-                <a href="https://discord.com" class="discord">
+                <a href="https://discord.com/invite/baryFXMV">
                     <i class="fab fa-discord fa-2xl"></i>
                 </a>
-                <i class="fab fa-instagram fa-2xl"></i>
+                <a href="https://instagram.com/metafashion.NFT">
+                    <i class="fab fa-instagram fa-2xl"></i>
+                </a>
             </div>
             <div class="content has-text-centered">
                 <p>© 2022 METAFASHION</p>
@@ -522,26 +528,10 @@
         <!--VIP-->
         <div id="vip" class="modal">
             <div class="modal-background"></div>
-<!--            <div class="modal-card">-->
-<!--                <div class="modal-container">-->
-<!--                    <header class="modal-card-head">-->
-<!--                        <p class="modal-card-title">VIP Signup</p>-->
-<!--                        <button class="delete is-large" aria-label="close"></button>-->
-<!--                    </header>-->
-<!--                    <section class="modal-card-body">-->
-<!--                        <p>> Connect your wallet to add your address to the MetaFashion VIP list</p>-->
-<!--                        <p>> Sign the message so that only MetaFashion HQ can decrypt it</p>-->
-<!--                    </section>-->
-<!--                    <footer class="modal-card-foot">-->
-<!--                        <a class="button modal-button vip" data-target="vip">Connect Wallet</a>-->
-<!--                    </footer>-->
-<!--                </div>-->
-<!--            </div>-->
             <div class="modal-content">
                 <div class="container">
                     <section class="section" >
                         <h1 class="title">VIP Signup</h1>
-
                         <div class="block">
                             <p>> Connect your wallet to add your address to the MetaFashion VIP list</p>
                             <p>> Sign the message so that only MetaFashion HQ can decrypt it</p>
@@ -620,7 +610,10 @@
 
         async function init() {
             function setStatus(percent) {
-                document.querySelectorAll('.progress-bar .value')[0].style.width = percent + '%';
+                let indicator = document.querySelectorAll('.progress-bar .value')[0];
+                indicator.style.width = percent + '%';
+                if (percent >= 100)
+                    indicator.classList.add('is-complete');
                 document.getElementById('status').innerText = percent + '%';
             }
 
