Separated glitch stylesheet, various other fixes after testing.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="glitch-image"></div>
                     <div class="glitch-image"></div>
                 </div>
-                <div class="block">
+                <div id="hero-content" class="block">
                     <p class="title">The takeover is now</p>
                     <p class="subtitle has-text-centered">
                         <a href="#rewards">
