Changes to team names.

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         </figure>
                         <div class="card-content has-text-centered">
                             <div class="content">
-                                <p class="title is-5">Cameron Burns</p>
+                                <p class="title is-5">CAPTVART</p>
                                 <p class="subtitle is-5">Owner / Lead Artist</p>
                             </div>
                             <div class="media">
@@ -377,7 +377,7 @@
                         </figure>
                         <div class="card-content has-text-centered">
                             <div class="content">
-                                <p class="title is-4">Jeremy Eggert</p>
+                                <p class="title is-4">Art by Jeremy</p>
                                 <p class="subtitle is-5">Owner / Branding / Dev</p>
                             </div>
                             <div class="media">
